objects/FieloCH__ChallengeReward__c.object
<CustomObject>
    <customHelpPage>FieloCH__ChallengeRewardHelpBackend</customHelpPage>
    <fields>
        <fullName>FieloCH__AttachmentId__c</fullName>
        <description>The Id of the attach record</description>
        <label>AttachmentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Badge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Badge</label>
        <referenceTo>FieloEE__Badge__c</referenceTo>
        <relationshipLabel>Challenge Rewards</relationshipLabel>
        <relationshipName>ChallengeRewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__Challenge__c</fullName>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>ChallengeRewards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCH__DateValue__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCH__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloCH__FieldToUpdate__c</fullName>
        <description>Field of member to update</description>
        <label>Field To Update</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__FieldType__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                    <default>true</default>
                    <label>Date</label>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__From__c</fullName>
        <description>Range of position to win this reward</description>
        <label>From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Limit__c</fullName>
        <description>Limit of reward by member</description>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__ListValue__c</fullName>
        <label>ListValue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__LogicalExpression__c</fullName>
        <label>Logical Expression</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCH__NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__PositionText__c</fullName>
        <formula>IF( ISPICKVAL(FieloCH__Challenge__r.FieloCH__TableType__c, &apos;Standard&apos;) ,  TEXT(FieloCH__Position__c) , 

         IF( FieloCH__To__c == 0 , 
             &apos; + &apos;+ TEXT(FieloCH__From__c) ,
             TEXT(FieloCH__From__c) +&apos; - &apos;+ TEXT(FieloCH__To__c) 
         )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Position__c</fullName>
        <label>Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Reward__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Instant reward</description>
        <label>Reward</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Reward does not exist or it is not an instant reward</errorMessage>
            <filterItems>
                <field>FieloEE__Reward__c.FieloEE__isInstantReward__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloEE__Reward__c</referenceTo>
        <relationshipLabel>Challenge Rewards</relationshipLabel>
        <relationshipName>ChallengeRewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__To__c</fullName>
        <description>Range of position to win this reward</description>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__TransactionPoint__c</fullName>
        <description>Point value of the transaction</description>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__TransactionType__c</fullName>
        <description>Type of the transaction</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjust</fullName>
                    <default>true</default>
                    <label>Adjust</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Value__c</fullName>
        <description>Value to update the member field</description>
        <label>Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__WithCustomReward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom reward</label>
        <type>Checkbox</type>
    </fields>
    <label>Challenge Reward</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloCH__Edit_Reward</fullName>
        <active>true</active>
        <description>If the Challenge is active then the reward cannot be modified</description>
        <errorConditionFormula>FieloCH__Challenge__r.FieloCH__IsActive__c</errorConditionFormula>
        <errorMessage>Cannot modified the Reward if the Challenge is Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Reward_Program_Validation</fullName>
        <active>true</active>
        <description>Checks that the reward belongs to the same program as the challenge.</description>
        <errorConditionFormula>AND(
    NOT( ISBLANK(FieloCH__Reward__c) ) ,
    FieloCH__Reward__r.FieloEE__Program__c !=  FieloCH__Challenge__r.FieloCH__Program__c)</errorConditionFormula>
        <errorMessage>The Reward does not belong to the same Program as the Challenge.</errorMessage>
    </validationRules>
</CustomObject>